--- a/src/styles/swcard.css
+++ b/src/styles/swcard.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.google.com/css? family=Poppins:100,200,300,400.500,600,700,800,900');
+@import url('https://fonts.google.com/css?family=Poppins:100,200,300,400.500,600,700,800,900');
 * {
   margin:0;
   padding: 0;
@@ -72,6 +72,7 @@ body
     transition: 0.5s;
     z-index: 10;
     overflow: hidden;
+    border-radius: 50%;
 }
 
 .card:hover .imgBx {
@@ -89,6 +90,7 @@ body
     transform: translate(-50%,-50%);
     background: linear-gradient(transparent,#77c543, #77c543,#77c543, transparent);
     animation: animate2 6s linear infinite;
+    border-radius: 50%;
 }
 
 @keyframes animate2 {
@@ -106,6 +108,7 @@ body
     position: absolute;
     inset: 3px;
     background: #292929;
+    border-radius: 50%;
 }
 
 .card .imgBx img {
@@ -115,6 +118,95 @@ body
     z-index: 1;
     width: calc(100% - 20px);
     height: calc(100% - 20px);
+    object-fit: cover;
+    border-radius: 50%;
     filter: grayscale(1);
 }
 
+.card:hover .imgBx img {
+    filter: grayscale(0);
+}
+
+.card .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    overflow: hidden;
+}
+
+.card .content .details {
+    padding: 40px;
+    text-align: center;
+    width: 100%;
+    transition: 0.5s;
+    transform: translateY(145px);
+    opacity: 0;
+}
+
+.card:hover .content .details {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.card .content .details h2 {
+    font-size: 1.25em;
+    font-weight: 600;
+    color: #45f3ff;
+    line-height: 1.2em;
+}
+
+.card .content .details h2 span {
+    font-size: 0.75em;
+    font-weight: 500;
+    color: #fff;
+}
+
+.card .content .details .data {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+.card .content .details .data h3 {
+    font-style: 1em;
+    color: #45f3ff;
+    line-height: 1.2em;
+    font-weight: 600;   
+}
+
+.card .content .details .data h3 span {
+    font-size: 0.85em;
+    font-weight: 400;
+    color: #fff;
+}
+
+.card .content .details .actionBtn {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.card .content .details .actionBtn button {
+    padding: 10px 30px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1em;
+    font-weight: 500;
+    background: #45f3ff;
+    color: #222;
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.card .content .details .actionBtn button:nth-child(2) {
+    background: #fff;
+}
+
+
+.card .content .details .actionBtn button {
+    opacity: 1;
+}
